# mla

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: sphinx.yml
_sources/: index.rst.txt
assignments/: README.rst  index.rst
assignments/01_assignment/src/: assignment_01.py
assignments/02_assignment/src/: __main__.py  assignment_02.py  assignment_02_Falko.py  task1.py  task2.py  task3.py  task3_benchmark.py  task4.py  task4_benchmark.out  task4_benchmark.py
assignments/03_assignment/: 03_assignment.md  03_results.md
assignments/03_assignment/src/: __main__.py  task1.py  task2.py  task2_falko.py  task3.py  task3_b_best_configs.txt  task3_b_results.txt  task4.py
assignments/04_assignment/: 04_results.md
assignments/04_assignment/src/: task_1b.py  task_1c.py  task_1c_benchmark.py  task_1d.py  task_1d_benchmark.py  task_1e.py  task_2.out  task_2.py  task_2a.py  task_3.py
assignments/05_assignment/: 05_results.md
assignments/05_assignment/src/: config.py
docs/: Makefile  echo
docs/source/: 01_results.md  02_results.md  03_results.md  assignment_01.md  assignment_01.rst  assignment_02.md  conf.py  index.rst
submissions/: 01.tar.xz  02.tar.xz  03.tar.xz  04.tar.xz
submissions/01/: contribution.txt  report_link.txt
submissions/03/: contribution.txt  git.link  report_link.txt
